Started working on the main page

--- a/Website/HTML/Main Page.html
+++ b/Website/HTML/Main Page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css link -->
-    <link rel="stylesheet" href="/Website/Styles/Memory Game.css" />
+    <link rel="stylesheet" href="/Website/Styles/Main Page.css" />
     <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,114 @@
     <title>Memory Game</title>
   </head>
   <body>
-    Memory game
+    <div class="wrapper">
+      <!-- board -->
+      <div class="board">
+        <!-- stats -->
+        <div class="stats">
+          <div class="time">
+            <span class="label">Time:</span>
+            <span id="minute">00</span>:<span id="second">00</span>
+          </div>
+          <div class="moves">
+            <span class="label">Moves:</span>
+            <span id="moves">0</span>
+          </div>
+        </div>
+
+        <!-- cards -->
+        <div class="card-container">
+          <!-- to be filled by js -->
+          <!-- c1 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">S</div>
+          </div>
+          <!-- c2 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c3 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c4 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+          <!-- c5 -->
+          <div class="card">
+            <div class="face back-face">?</div>
+            <div class="face front-face">X</div>
+          </div>
+        </div>
+
+        <!-- stop button -->
+        <div class="button">
+          <button id="stopBtn">Stop Game</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- js link -->
+    <script src="/Website/Script/Main Page.js"></script>
   </body>
 </html>
-<script src="/Website/Script/Memory Game.js"></script>
