Finished everything except the responsiveness

--- a/Website/HTML/Main Page.html
+++ b/Website/HTML/Main Page.html
@@ -34,91 +34,25 @@
         <!-- cards -->
         <div class="card-container">
           <!-- to be filled by js -->
-          <!-- c1 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">S</div>
-          </div>
-          <!-- c2 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c3 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c4 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
-          <!-- c5 -->
-          <div class="card">
-            <div class="face back-face">?</div>
-            <div class="face front-face">X</div>
-          </div>
         </div>
 
         <!-- stop button -->
         <div class="button">
           <button id="stopBtn">Stop Game</button>
+        </div>
+      </div>
+
+      <!-- win page -->
+      <div class="win-page">
+        <div class="result">
+          <h1>You Won</h1>
+          <h3 class="total-moves">Moves : <span id="total-moves">0</span></h3>
+          <h3 class="total-time">
+            Time : <span id="total-min">00</span>:<span id="total-sec">00</span>
+          </h3>
+        </div>
+        <div class="button">
+          <button id="playAgainBtn">Play Again</button>
         </div>
       </div>
     </div>
